# com-poc

./: CMakeLists.txt  go.mod
cmd/testtool/: main.go
internal/dll/: dll.go
internal/types/: types.go
src/: api.cpp  api.h  types.h
tools/: build.bat
